# OpenYSM-Experimental

./: .gitmodules  CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle
src/main/java/com/elfmcys/yesstevemodel/: NativeLibLoader.java  YesSteveModel.java
src/main/java/com/elfmcys/yesstevemodel/capability/: ModelInfoCapability.java  PlayerCapability.java  YsmCapabilities.java  YsmClientCapabilities.java
src/main/java/com/elfmcys/yesstevemodel/client/: ClientModelManager.java
src/main/java/com/elfmcys/yesstevemodel/command/: OpenYSMClientCommand.java  RootClientCommand.java
src/main/java/com/elfmcys/yesstevemodel/config/: GeneralConfig.java  ModSoundEvents.java  NativeAccelerationMode.java
src/main/java/com/elfmcys/yesstevemodel/event/: CapabilityEvent.java  CommandRegistry.java  CommonEvent.java  YsmFabricClientLifecycle.java  YsmFabricLifecycle.java
src/main/java/com/elfmcys/yesstevemodel/mixin/: EntityCapabilityPersistenceMixin.java  ServerGamePacketListenerImplAccessor.java
src/main/java/com/elfmcys/yesstevemodel/model/: ServerModelManager.java
src/main/java/com/elfmcys/yesstevemodel/network/: NetworkHandler.java
src/main/java/com/elfmcys/yesstevemodel/util/: CameraUtil.java  (+3 more)
src/main/java/net/minecraftforge/common/: ForgeConfigSpec.java  ForgeMod.java  MinecraftForge.java
src/main/java/net/minecraftforge/event/: AddReloadListenerEvent.java  AttachCapabilitiesEvent.java  RegisterCommandsEvent.java  TickEvent.java
src/main/java/net/minecraftforge/fml/: DistExecutor.java  InterModComms.java  ModList.java  ModLoader.java  ModLoadingContext.java  ModLoadingStage.java  ModLoadingWarning.java
src/main/java/net/minecraftforge/network/: NetworkDirection.java  NetworkEvent.java  NetworkRegistry.java  NetworkSide.java  PacketDistributor.java
src/main/java/net/minecraftforge/registries/: DeferredRegister.java  ForgeRegistries.java  IForgeRegistry.java
src/main/java/net/minecraftforge/server/: ServerLifecycleHooks.java
src/main/java/rip/ysm/algorithms/: YsmZstd.java
src/main/java/rip/ysm/legacy/: YesModelUtils.java
src/main/java/rip/ysm/util/: HashUtils.java
src/main/native/: render.cpp
src/main/resources/: fabric.mod.json  yes_steve_model.mixins.json
(+229 files in other folders)
